--- a/操作系统.md
+++ b/操作系统.md
@@ -1,11 +1,11 @@
 # 操作系统
 
-- [操作系统笔记-概述](os-summary)
-- [操作系统笔记-进程管理](os-processmanagement)
-- [操作系统笔记-死锁](os-deadlock)
-- [操作系统笔记-内存管理](os-memorymanagement)
-- [操作系统笔记-设备管理](os-appmanagement)
-- [操作系统笔记-链接](os-link)
+- [操作系统笔记-概述](操作系统-概述)
+- [操作系统笔记-进程管理](操作系统-进程管理)
+- [操作系统笔记-死锁](操作系统-死锁)
+- [操作系统笔记-内存管理](操作系统-内存管理)
+- [操作系统笔记-设备管理](操作系统-设备管理)
+- [操作系统笔记-链接](操作系统-链接)
 
 # 参考资料
 
