--- a/计算机网络.md
+++ b/计算机网络.md
@@ -1,11 +1,11 @@
 # 计算机网络基础
 
-- [计算机网络概述](computernetwork-description)
-- [计算机网络-物理层](computernetwork-physical-layer)
-- [计算机网络-数据链路层](computernetwork-link-layer)
-- [计算机网络-网络层](computernetwork-network-layer)
-- [计算机网络-传输层](computernetwork-transmision-layer)
-- [计算机网络-应用层](computernetwork-application-layer)
+- [计算机网络概述](计算机网络-概述)
+- [计算机网络-物理层](计算机网络-物理层)
+- [计算机网络-数据链路层](计算机网络-链路层)
+- [计算机网络-网络层](计算机网络-网络层)
+- [计算机网络-传输层](计算机网络-传输层)
+- [计算机网络-应用层](计算机网络-应用层)
 
 # 计算机网络复习脉络
 
